--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
               <div class="stats shadow">
                 <div class="stat">
               
-                  <div class="stat-value">$45000</div>
+                  <div id="account-balance" class="stat-value">45000</div>
                   <div class="stat-desc">Available Balance</div>
                 </div>
               </div>
@@ -39,16 +39,16 @@
                   <label class="label">
                     <span class="label-text">Amount</span>
                   </label>
-                  <input id="text" type="mobail" placeholder="Amount" class="input input-bordered" required />
+                  <input id="input-add-money" type="mobail" placeholder="Amount" class="input input-bordered" required />
                 </div>
                 <div class="form-control">
                   <label class="label">
                     <span class="label-text">Pin</span>
                   </label>
-                  <input id="pin-number" type="password" placeholder="Enter Pin" class="input input-bordered" autocomplete="off" required />
+                  <input id="input-pin-number" type="password" placeholder="Enter Pin Number" class="input input-bordered" autocomplete="off" required />
                 </div>
                 <div class="form-control mt-6">
-                  <button id="btn-loging" class="btn btn-primary">Add Money</button>
+                  <button id="btn-add-money" class="btn btn-primary">Add Money</button>
                 </div>
               </form>
             </div>
